--- a/.github/workflows/arxiv_notifier.yml
+++ b/.github/workflows/arxiv_notifier.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install arxiv
+        pip install arxiv PyYAML
     
     - name: Run ArXiv Paper Notifier
       env:
